--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.5",
+    "@supabase/ssr": "^0.7.0",
     "lucide-react": "^0.553.0",
+    "mongodb": "^7.0.0",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "ssr": "^5.7.5",
+    "supabase": "^2.58.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
